Fix minor errors deploying Apache Spark